fixed bug with minimized window and dark mode overlays

--- a/fskneeboard-panel/christian1984-ingamepanel-fskneeboard/html_ui/InGamePanels/FSKneeboardPanel/FSKneeboardPanel.css
+++ b/fskneeboard-panel/christian1984-ingamepanel-fskneeboard/html_ui/InGamePanels/FSKneeboardPanel/FSKneeboardPanel.css
@@ -74,3 +74,7 @@ html, body {
     filter: saturate(0) !important;
 }
 
+ingame-ui.minimized .overlay {
+    display: none !important;
+}
+
